spacing fix

--- a/website-new/style.css
+++ b/website-new/style.css
@@ -37,7 +37,7 @@ header {
   justify-content: flex-end;
   align-items: center;
   padding: 0 1vw;
-  gap: 1vw;
+  gap: 2vw;
   height: 100%;
   width: 100%;
   cursor: default;
